fix: check changed files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,10 @@ jobs:
       - name: Go Fmt
         run: go fmt ./...
 
+      - name: Check changed files
+        run: |
+          git diff --exit-code
+
   test:
     runs-on: ubuntu-latest
     steps:
