--- a/.github/workflows/_ci.yml
+++ b/.github/workflows/_ci.yml
@@ -1,12 +1,11 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_call:
+    inputs:
+      working-directory:
+        description: "The working directory to run the CI in"
+        required: true
 
 permissions:
   contents: read
@@ -16,6 +15,7 @@ permissions:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    working-directory: ${{ github.event.inputs.working-directory }}
     steps:
       - name: Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
@@ -35,6 +35,7 @@ jobs:
 
   format:
     runs-on: ubuntu-latest
+    working-directory: ${{ github.event.inputs.working-directory }}
     steps:
       - name: Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
@@ -53,6 +54,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    working-directory: ${{ github.event.inputs.working-directory }}
     steps:
       - name: Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
