--- a/.github/workflows/_ci.yml
+++ b/.github/workflows/_ci.yml
@@ -12,10 +12,12 @@ permissions:
   pull-requests: read
   checks: write
 
+env:
+  PROJECT_DIR: ${{ github.event.inputs.working-directory }}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
-    working-directory: ${{ github.event.inputs.working-directory }}
     steps:
       - name: Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
@@ -23,19 +25,20 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
-          go-version-file: ./go.mod
+          go-version-file: ${{ env.PROJECT_DIR }}/go.mod
 
       - name: Go Vet
+        working-directory: ${{ env.PROJECT_DIR }}
         run: go vet ./...
 
       - name: Go Lint
         uses: golangci/golangci-lint-action@a4f60bb28d35aeee14e6880718e0c85ff1882e64 # v6
         with:
           version: latest
+          working-directory: ${{ env.PROJECT_DIR }}
 
   format:
     runs-on: ubuntu-latest
-    working-directory: ${{ github.event.inputs.working-directory }}
     steps:
       - name: Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
@@ -43,9 +46,10 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
-          go-version-file: ./go.mod
+          go-version-file: ${{ env.PROJECT_DIR }}/go.mod
 
       - name: Go Fmt
+        working-directory: ${{ env.PROJECT_DIR }}
         run: go fmt ./...
 
       - name: Check changed files
@@ -54,7 +58,6 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    working-directory: ${{ github.event.inputs.working-directory }}
     steps:
       - name: Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
@@ -62,7 +65,8 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
-          go-version-file: ./go.mod
+          go-version-file: ${{ env.PROJECT_DIR }}/go.mod
 
       - name: Go Test
+        working-directory: ${{ env.PROJECT_DIR }}
         run: go test -v ./...
