--- a/.github/workflows/lib-dmarc.yml
+++ b/.github/workflows/lib-dmarc.yml
@@ -9,8 +9,11 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  PROJECT_DIR: ./lib/dmarc
+
 jobs:
   ci:
     uses: ./.github/workflows/_ci.yml
     with:
-      working-directory: ./lib/dmarc
+      working-directory: ${{ env.PROJECT_DIR }}
