--- a/.github/workflows/_ci.yml
+++ b/.github/workflows/_ci.yml
@@ -6,6 +6,7 @@ on:
       working-directory:
         description: "The working directory to run the CI in"
         required: true
+        type: string
 
 permissions:
   contents: read
@@ -13,7 +14,7 @@ permissions:
   checks: write
 
 env:
-  PROJECT_DIR: ${{ github.event.inputs.working-directory }}
+  WORKING_DIRECTORY: ${{ github.event.inputs.working-directory }}
 
 jobs:
   lint:
@@ -25,17 +26,17 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
-          go-version-file: ${{ env.PROJECT_DIR }}/go.mod
+          go-version-file: ${{ env.WORKING_DIRECTORY }}/go.mod
 
       - name: Go Vet
-        working-directory: ${{ env.PROJECT_DIR }}
+        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: go vet ./...
 
       - name: Go Lint
         uses: golangci/golangci-lint-action@a4f60bb28d35aeee14e6880718e0c85ff1882e64 # v6
         with:
           version: latest
-          working-directory: ${{ env.PROJECT_DIR }}
+          working-directory: ${{ env.WORKING_DIRECTORY }}
 
   format:
     runs-on: ubuntu-latest
@@ -46,10 +47,10 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
-          go-version-file: ${{ env.PROJECT_DIR }}/go.mod
+          go-version-file: ${{ env.WORKING_DIRECTORY }}/go.mod
 
       - name: Go Fmt
-        working-directory: ${{ env.PROJECT_DIR }}
+        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: go fmt ./...
 
       - name: Check changed files
@@ -65,8 +66,8 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
-          go-version-file: ${{ env.PROJECT_DIR }}/go.mod
+          go-version-file: ${{ env.WORKING_DIRECTORY }}/go.mod
 
       - name: Go Test
-        working-directory: ${{ env.PROJECT_DIR }}
+        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: go test -v ./...
