fix: add workflow permissions

--- a/.github/workflows/lib-dmarc.yml
+++ b/.github/workflows/lib-dmarc.yml
@@ -9,6 +9,11 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pull-requests: read
+  checks: write
+
 jobs:
   ci:
     uses: ./.github/workflows/_ci.yml
