--- a/.github/workflows/libs-dmarc.yml
+++ b/.github/workflows/libs-dmarc.yml
@@ -1,4 +1,4 @@
-name: lib/dmarc
+name: libs/dmarc
 
 on:
   push:
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - libs/dmarc/**
+  merge_group:
   workflow_dispatch:
 
 permissions:
