chore: add merge_group trigger to security

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -7,6 +7,7 @@ on:
       - main
   schedule:
     - cron: "0 0 * * 1" # Run every Monday at 00:00 UTC
+  merge_group:
 
 jobs:
   dependency-review:
