--- a/services/ingest-service/infra/package.json
+++ b/services/ingest-service/infra/package.json
@@ -5,6 +5,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/node": "^20.14.12",
     "aws-cdk": "^2.150.0",
     "aws-cdk-lib": "^2.150.0",
     "constructs": "^10.3.0"
