feature: setup email receiving (#10)
* chore: scaffold infrastructure project

* feature: setup email receiving services

* chore: remove sns since this has been replaced with Lambda + S3

* feature: create SQS queue

* feature: send message to SQS

* chore: cleanup Go code

* fix: update object location

* chore: include additional parameters in SQS message

* chore: mod tidy

* chore: remove aws dependency in message file

* chore: use log package for logging

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 go.work
+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+node_modules/
+
+cdk.out/
+
+# Ignore build Go files in ./bin but keep the infra/bin directories
+!infra/bin/
+bin/
