--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dmarc-monitor",
   "packageManager": "yarn@4.3.1",
   "workspaces": [
-    "services/*/infra"
+    "services/*/infra",
+    "libs/*"
   ]
 }
