--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && \
   ca-certificates \
   && \
   curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip && \
-  unzip awscliv2.zip && \
+  unzip -q awscliv2.zip && \
   ./aws/install -i /usr/local/aws-cli -b /usr/local/bin
 
 
