chore: initial refactor (not yet complete)

--- a/libs/cdk-constructs/package.json
+++ b/libs/cdk-constructs/package.json
@@ -6,5 +6,10 @@
     "aws-cdk-lib": "2.150.0",
     "constructs": "10.3.0",
     "typescript": "5.5.4"
+  },
+  "exports": {
+    ".": "./lib/index.ts",
+    "./datastores": "./lib/datastores/index.ts",
+    "./messaging": "./lib/messaging/index.ts"
   }
 }
