--- a/.github/workflows/libs_common.yml
+++ b/.github/workflows/libs_common.yml
@@ -19,6 +19,11 @@ permissions:
 
 jobs:
   ci:
-    uses: ./.github/workflows/_ci.yml
-    with:
-      working-directory: ./libs/common
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+    # uses: ./.github/workflows/_ci.yml
+    # with:
+    #   working-directory: ./libs/common
