feature: scaffold out the tenant service

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ node_modules/
 
 cdk.out/
 
-# Ignore build Go files in ./bin but keep the infra/bin directories
-!infra/bin/
+# Ignore built Go files in ./bin but keep the infra/bin directories
 bin/
+!services/*/infra/bin/
