--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
 max_line_length = 80
+indent_size = 2
 
 [*.go]
 indent_style = space
